--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -63,7 +63,7 @@
     background-color: #D9D9D9;
     border-radius: 0.5rem;
     padding: 1.5rem;
-    min-height: calc(100vh - 120px);
+    min-height: 500px;
 }
 
 .btn-custom {
