--- a/public/CSS/layout.css
+++ b/public/CSS/layout.css
@@ -6,8 +6,8 @@ body {
 }
 
 /* SIDEBAR */
-.sidebar {
-    width: 15%;
+/* .sidebar {
+    width: 20%;
     background-color: #ffffff;
     border-right: 1px solid #e5e5e5;
     min-height: 100vh;
@@ -16,7 +16,7 @@ body {
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.05);
     position: sticky;
     top: 0;
-}
+} */
 
 .sidebar-header .logo {
     width: 70px;
