--- a/public/CSS/dashboard.css
+++ b/public/CSS/dashboard.css
@@ -1,7 +1,8 @@
 .dashboard-container {
     background-color: transparent;
-    min-height: 100vh;
+    height: 100%;
     padding: 20px 25px;
+    overflow: auto;
 }
 
 .search-bar input {
