--- a/public/CSS/equipment.css
+++ b/public/CSS/equipment.css
@@ -18,7 +18,7 @@
     border-spacing: 0;
     font-size: 0.95rem;
     background-color: #fff;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     overflow: hidden;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
