--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -559,6 +559,20 @@ body {
     color: white;
 }
 
+.cust-searchbar {
+    max-width: 40%;
+    border-radius: 10px; 
+    overflow: hidden;
+}
+
+.sb-border {
+    border-radius: 10px 0 0 10px !important; 
+}
+
+.max-h {
+    height: 100% !important;
+}
+
 .h-10 {
     height: 10%;
 }
