--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -225,6 +225,7 @@ input[readonly] {
     transition: all 0.3s ease;
 }
 
+
 .form-container input.form-control:focus {
     border-color: #60BF4F;
     box-shadow: 0 0 6px rgba(96, 191, 79, 0.4);
@@ -469,7 +470,21 @@ body {
     width: max-content;
 }
 
+.cust-underline {
+    border-bottom: 3px#60BF4F solid;
+    width: 100%;
+}
+
+.cust-underline-secondary {
+    border-bottom: 1px#60BF4F solid;
+    width: 100%;
+}
+
 .cust-h-heading {
+    height: 10%;
+}
+
+.cust-h-10 {
     height: 10%;
 }
 
@@ -487,6 +502,13 @@ body {
     height: 90%;
 }
 
+.cust-white-bg {
+    background-color: white;
+    border-radius: 10px;
+    padding: 2%;
+    border: 1px #60BF4F solid;
+}
+
 .cust-h-form {
     height: 90%;
 }
@@ -498,6 +520,10 @@ body {
 .cust-full-h {
     height: 100%;
     overflow: auto;
+}
+
+.cust-h-100 {
+    height: 100%;
 }
 
 .cust-form-bg {
@@ -553,6 +579,7 @@ body {
 }
 
 .cust-btn-secondary {
+    background-color: white;
     border-radius: 5px;
     border: 1px #60BF4F solid;
     transition: all 0.3s ease;
@@ -586,6 +613,7 @@ body {
 }
 
 .cust-btn-danger-secondary {
+    background-color: white;
     border-radius: 5px;
     border: 1px #bf4f4f solid;
     transition: all 0.3s ease;
@@ -597,8 +625,14 @@ body {
 .cust-btn-danger-secondary:hover {
     background-color: #bf4f4f;
     color: white;
-    box-shadow: 0 0 0 3px #bf4f4f;
+    box-shadow: 0 0 0 3px #ff9b9b;
     border-color: #bf4f4f;
+}
+
+.cust-plain-bg {
+    background-color: white;
+    width: 100%;
+    height: 100%;
 }
 
 .cust-searchbar {
