--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -498,6 +498,12 @@ body {
     overflow: auto;
 }
 
+.cust-add-form {
+    height: 100%;
+    overflow-y: auto;
+    padding: 2%;
+}
+
 .cust-h {
     height: 90%;
 }
@@ -556,6 +562,7 @@ body {
 
 .cust-warning td{
     background-color: #fff7b7 !important;
+    color: #fff7b7 !important;
 }
 
 .cust-btn {
@@ -660,6 +667,29 @@ body {
     width: min-content;
 }
 
+.cust-border-green {
+    border: 1px #60BF4F solid;
+    background-color: #ddf5d8;
+    color: #212529;
+    font-weight: 500;
+}
+
+.cust-table-shadow {
+    box-shadow: 0px 0px 3px 0px rgb(193, 193, 193);
+}
+
+.cust-table-header {
+    padding: 1% 0;
+    border-bottom: 3px#60BF4F solid;
+    border-radius: 5px 5px 0 0; 
+    font-weight: bold;
+    font-size: large;
+}
+
+.cust-table-content {
+    border-bottom: 1px#9f9f9f solid;
+}
+
 .cust-searchbar:hover {
     box-shadow: 0 0 0 3px rgba(96, 191, 79, 0.2);
     border-color: #60BF4F;
@@ -699,6 +729,11 @@ body {
 
 .cust-max-500 {
     max-height: 500px;
+    overflow-y: auto;
+}
+
+.cust-max-300 {
+    max-height: 300px;
     overflow-y: auto;
 }
 
