--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -468,6 +468,15 @@ body {
     width: fit-content;
 }
 
+.cust-fit-h {
+    height: fit-content;
+}
+
+.cust-max-h {
+    height: max-content;
+}
+
+
 .cust-sub-title{
     color: black;
     border-bottom: 3px#60BF4F solid;
@@ -488,10 +497,6 @@ body {
     height: 10%;
 }
 
-.cust-h-10 {
-    height: 10%;
-}
-
 .cust-h-content {
     height: 90%;
     overflow: auto;
@@ -506,10 +511,6 @@ body {
     height: 100%;
     overflow-y: auto;
     padding: 2%;
-}
-
-.cust-h {
-    height: 90%;
 }
 
 .cust-white-bg {
@@ -532,9 +533,6 @@ body {
     overflow: auto;
 }
 
-.cust-h-100 {
-    height: 100%;
-}
 
 .cust-form-bg {
     display: block;
@@ -705,6 +703,17 @@ body {
 
 .max-h {
     height: 100% !important;
+}
+
+.cust-h-40 {
+    height: 40%;
+}
+.cust-h-60 {
+    height: 60%;
+}
+
+.cust-h-90 {
+    height: 90%;
 }
 
 .h-10 {
